--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   get_it: ^8.2.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
