--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^8.2.0
   cached_network_image: ^3.4.1
-  drift: ^2.28.1
-  drift_flutter: ^0.2.6
-  path_provider: ^2.1.5
-  path: ^1.9.1
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
